<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:hint="Student Data"
        android:padding="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnNextPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous Student" />

        <Button
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnNextStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next Student" />
    </LinearLayout>


    <Button
        android:layout_marginVertical="20dp"
        android:id="@+id/btnShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share App" />


</LinearLayout>